--- a/index.html
+++ b/index.html
@@ -89,5 +89,15 @@
 			</div>
 		</div>
 	</div>
+
+<script>
+	let statelist = document.getElementById('state-list')
+
+
+	statelist.onchange = function() {
+    console.log(this.value)
+	}
+</script>
+
 </body>
 </html>
